# speak-now

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  stt_cache.py  stt_cache_v2.py  stt_config.toml.example  stt_min.py
_archive/: stt_cache.py  stt_min.py
src/speak_now/: __init__.py  app.py  cli.py  config.py  gui_notification.py  hotkey_manager.py  text_cache.py  utils.py
