[project]
name = "speak-now"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yada", email = "trojblue@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=1.26.4",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "realtimestt>=0.3.95",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[project.scripts]
speak-now = "speak_now.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
